--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.4.4",
     "babel-plugin-styled-components": "^2.0.6",
     "gatsby": "^4.8.0",
     "gatsby-plugin-image": "^2.8.1",
