--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@middy/core": "^2.5.3",
-    "@middy/http-json-body-parser": "^2.5.3"
+    "@middy/http-json-body-parser": "^2.5.3",
+    "@slack/webhook": "^6.1.0"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
