--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "gatsby": "^4.8.0",
     "gatsby-plugin-google-gtag": "^4.10.0",
     "gatsby-plugin-image": "^2.8.1",
+    "gatsby-plugin-manifest": "^4.10.0",
     "gatsby-plugin-react-helmet": "^5.8.0",
     "gatsby-plugin-sharp": "^4.8.1",
     "gatsby-plugin-styled-components": "^5.8.0",
@@ -39,6 +40,7 @@
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.23",
     "typescript": "^4.5.5"
   }
